    throw an FBB::Exception{ 1 } when called, and are removed at the next
    major bobcat release. Man-pages were updated accordingly.

  * The member `std::streamsize pXsputn(...)' defined in IOStreambuf is
    superfluous. 

  * Overridding members declared as 'virtual' are now declared as 'override'.

  * Added the overriding members `xsputn' to OfdStreambuf and Syslogbuf

  * Internal headers include bobcat headers using "../classname/classname"
    instead of <bobcat/classname>.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 29 Dec 2018 13:48:04 +0100

bobcat (4.08.06)

  * Added Exception::factory members returning stream objects, added
    Exception::open members accepting two ios::openmode arguments.

  * Repaired flaws in man-pages.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 Dec 2018 09:44:20 +0100
 
bobcat (4.08.05)

  * [[fallthrough]] requires a final semicolon (cf. C++ std 20, 10.6.5).
    Bobcat's code is fixed accordingly.

  * The BigInt::diophantus members do not require a BigInt object, and are now
    defined as static members.

  * Stat declares a default copy constructor, as it defines a move
    constructor. 

  * Superfluous 'return 0;' statements removed from source files and
    man-pages. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 26 Sep 2018 13:33:52 +0200

bobcat (4.08.04)

  * Migrated from Github to Gitlab.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 Jun 2018 14:16:16 +0530

bobcat (4.08.03)

  * Compilation requires c++17

  * LinearMap does not define the Alloc template parameter anymore: no longer
    required and producing a compilation error with g++8

  * Various cosmetic changes

  * The `build' script has new options: `test', building one class only
    (align) and `mantest', building a subset of the man-pages. These options
    were added for (internal) testing purposes only to test Debian package
    construction

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 May 2018 07:09:00 +0200
