@@ -1,7 +1,7 @@
 #include "datetime.ih"
 
 // static
-void DateTime::ZoneNames::addZone(string const &name, int minutes)
+void DateTime::ZoneNames::addZone(string const &name, DSTSpec const &spec)
 {
-    s_zone[name] = minutes;
+    s_zone[name] = spec;
 }
