@@ -1,9 +1,8 @@
 #include "datetime.ih"
 
-unordered_map<string, int>   DateTime::ZoneNames::s_zone = 
+unordered_map<string, DateTime::DSTSpec>   DateTime::ZoneNames::s_zone = 
 {
-    {"CET",      60},
-    {"CEST",    120},
+    {"CET", DSTSpec{ 60 } }
 };
     
 unordered_map<DateTime const *, unique_ptr<DateTime::DSTInfo>> 
@@ -36,4 +35,22 @@ char const *DateTime::s_day[] =
     "Fri",
     "Sat"
 };
+
+Pattern DateTime::ZoneNames::s_spec           // string to match assumed
+    {                                       // trimmed, used by match.cc 
+        //   1
+        R"_(^(\w+)\s*:\s*)_"                // ID :
+        // 2
+        "("
+        //  3           4   5
+        R"_((true|false)(\s+(\d+))?|)_"     // true/false [nMinutes shift]
+        //  6   
+        R"_((\d+)|)_"                       // nMinutes shift
+
+                                            // hh:mm hh:mm [nMinutes shift]
+        //  7           8        9   10
+        R"_((\d{3,4})\s+(\d{3,4})(\s+(\d+))?)_"
+        ")$",
+        true, 11
+    };
 
