@@ -1,0 +1,4 @@
+inline int DateTime::DSTSpec::minutes() const
+{
+    return d_dstSeconds / 60;
+}
