@@ -1,14 +1,23 @@
 #include "datetime.ih"
 
 // static
-void DateTime::readZones(std::string const &fname, bool header, char sep)
+void DateTime::readZones(std::string const &fname)
 {
     ifstream in = Exception::factory<ifstream>(fname);  // open the file
-    CSV4180 csv{ 2, header, sep };
 
-    while (in >> csv)
+    size_t count = 0;
+    string line;
+    while (getline(in, line))
     {
-        auto &&vect = csv.release();
-        addZone(vect[0][0], stol(vect[0][1]));
-    }    
+        ++count;
+
+        line = String::trim(line);
+        if (line.empty() || line[0] == '#')
+            continue;
+        
+            // true|false [minutes]
+            // minutes
+            // begin end [minutes]
+        ZoneNames::match(fname, count, line);
+    }
 }
