@@ -1,11 +1,6 @@
-/*
-                              driver.cc
-*/
-
 #include "driver.h"
 
-//#include <bobcat/pattern>
-#include "../pattern.ih"
+#include <bobcat/pattern>
 
 using namespace std;
 using namespace FBB;
@@ -13,118 +8,80 @@ using namespace FBB;
 #include <algorithm>
 #include <cstring>
 
-void Pattern::swap(Pattern &other)
-{
-    fswap(*this, other);
-    fswap(d_text, other.d_text);
-    d_text.swap(other.d_text);
-}
-
-
 void showSubstr(string const &str)
 {
-    static int 
-        count = 1;
+    static int count = 0;
 
-    cout << "String " << count++ << " is '" << str << "'\n";
+    cout << "String " << ++count << " is '" << str << "'\n";
 }
 
+void match(Pattern const &patt, string const &text)
+try
+{
+     Pattern pattern{ patt };
+
+    pattern.match(text);
+
+    Pattern p3(pattern);
+
+    cout << "before:  " << p3.before() << "\n"
+            "matched: " << p3.matched() << "\n"  
+            "beyond:  " << pattern.beyond() << "\n"  
+            "end() = " << pattern.end() << '\n';
+
+    for (size_t idx = 0; idx != pattern.end(); ++idx)
+    {
+        string str = pattern[idx];
+
+        if (str.empty())
+            cout << "part " << idx << " not present\n";
+        else
+        {
+            Pattern::Position pos = pattern.position(idx);
+
+            cout << "part " << idx << ": '" << str << "' (" << 
+                        pos.first << "-" << pos.second << ")\n";
+        }
+    }
+}
+catch (exception const &exc)
+{
+    cout << exc.what() << '\n';
+}
 
 int main(int argc, char **argv)
 {
-//    {
-//        Pattern one("one");
-////        Pattern two(one);
-//        Pattern three("a");
-//        Pattern four;
-//        three = three;
-//    }
+    string patStr = R"(\d+)";
 
-
-//    try 
-//    {
-//        Pattern pattern("aap|noot|mies");
-//
-//        {
-//            Pattern extra(Pattern(pattern));
-//        }
-//    
-//        if (pattern << "noot")
-//            cout << "noot matches\n";
-//        else
-//            cout << ": noot doesn't match\n";
-//    }
-//    catch (exception const &e)
-//    {
-//        cout << e.what() << ": compilation failed" << endl;
-//    }
-//        
-    string pat = "\\d+";
-
-    while (true)
+    do
     {
-        cout << "Pattern: '" << pat << "'\n";
-
+        cout << "Pattern: '" << patStr << "'\n";
         try
         {
-            Pattern patt(pat, argc == 1);   // case sensitive by default,
-                                            // any arg for case insensitive
+                // by default: case sensitive
+                // use any args. for case insensitive
+            Pattern patt(patStr, argc == 1);
 
-            cout << "Compiled pattern: " << patt.pattern() << endl;
-
-            Pattern pattern;
-            pattern = patt;                 // assignment operator
+            cout << "Compiled pattern: " << patt.pattern() << '\n';
 
             while (true)
             {
                 cout << "string to match : ";
 
-                string st;
-                getline(cin, st);
-                if (st == "")
+                string text;
+                getline(cin, text);
+                if (text.empty())
                     break;
-                cout << "String: '" << st << "'\n";
-                try
-                {
-                    pattern.match(st);
-
-                    Pattern p3(pattern);
-        
-                    cout << "before:  " << p3.before() << "\n"
-                            "matched: " << p3.matched() << "\n"  
-                            "beyond:  " << pattern.beyond() << "\n"  
-                            "end() = " << pattern.end() << endl;
-        
-                    for (size_t idx = 0; idx < pattern.end(); ++idx)
-                    {
-                        string str = pattern[idx];
-            
-                        if (str == "")
-                            cout << "part " << idx << " not present\n";
-                        else
-                        {
-                            Pattern::Position pos = pattern.position(idx);
-        
-                            cout << "part " << idx << ": '" << str << "' (" <<
-                                    pos.first << "-" << pos.second << ")\n";
-                        }
-                    }
-                }
-                catch (exception const &e)
-                {
-                    cout << e.what() << ": " << st << " doesn't match" << endl;
-                    continue;
-                }
+                cout << "String: '" << text << "'\n";
+                match(patt, text);
             }
         }            
-        catch (exception const &e)
+        catch (exception const &exc)
         {
-            cout << e.what() << ": compilation failed" << endl;
+            cout << exc.what() << ": compilation failed\n";
         }
 
         cout << "New pattern: ";
-
-        if (!getline(cin, pat) || !pat.length())
-            return 0;
     }
+    while (getline(cin, patStr) and not patStr.empty());
 }
